2011-06-07  Alok Priyadarshi  <alokp@chromium.org>

Reviewed by Stephen White.

        [chromium] PlatformContextSkia leaks SkDeviceFactory
        https://bugs.webkit.org/show_bug.cgi?id=62163

        Valgrind tests should have caught this.

        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::setSharedGraphicsContext3D):

Canonical link: https://commits.webkit.org/77696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88258 268f45cc-cd09-0410-ab3c-d52691b4dbfc